Update Code settings, and add venv to bashrc

--- a/Code/settings.json
+++ b/Code/settings.json
@@ -67,6 +67,10 @@
     // Python
     "python.languageServer": "Pylance",
     "python.formatting.provider": "black",
+    "python.venvPath": "~/.venv",
+    "[python]": {
+        "editor.formatOnSave": true
+    },
     // Vim Settings
     "vim.easymotion": true,
     "vim.sneak": false,
